Fix home intro spacing

--- a/style.css
+++ b/style.css
@@ -633,8 +633,6 @@ summary::-webkit-details-marker {
   width: 90%;
   position: relative;
 
-  /* try to use grid to center cube instead of absolute */
-  border: 1px solid red;
   display: grid;
   grid-template-areas: 'stack';
   justify-items: center;
@@ -653,17 +651,11 @@ summary::-webkit-details-marker {
   animation-timing-function: linear;
 }
 .cube-container {
-  /* position: absolute; */
-  /* TODO: Adjust positioning to keep cube centered responsively */
-  /* top: 30%; */
-  /* left: 31%; */
   width: 25%;
   height: 25%;
   perspective: 500px;
   /* animation: float-cube 3s var(--ease-in-out-3) 5; */
 
-  /* try to use grid to center cube instead of absolute */
-  border: 1px solid green;
   grid-area: stack;
   position: relative; /*???*/
 }
@@ -929,7 +921,7 @@ summary::-webkit-details-marker {
   font-weight: var(--font-weight-1);
   text-transform: uppercase;
   text-align: left;
-  font-size: clamp(3.5rem, 15vw, 5.5rem);
+  font-size: clamp(3.5rem, 15vw, 5.15rem);
   font-weight: var(--font-weight-1);
   line-height: 0.85;
   letter-spacing: var(--font-letterspacing-0);
@@ -939,6 +931,14 @@ summary::-webkit-details-marker {
   width: 100%;
   padding-bottom: 100%;
   grid-column: span 12;
+}
+.parallax-frame {
+  position: relative;
+  z-index: 0;
+  background-image: url(./public/assets/sc-marsh.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 .square-section-content {
   position: absolute;
@@ -963,7 +963,6 @@ summary::-webkit-details-marker {
 }
 .about-h2 {
   font-size: 2.5rem;
-  /* line-height: 2rem; */
   font-weight: var(--font-weight-1);
   text-transform: uppercase;
 }
@@ -1016,7 +1015,8 @@ button:hover {
     line-height: 1.35rem;
   }
   .about-one,
-  .about-three {
+  .about-three, 
+  .parallax-frame {
     grid-column: 1 / 10;
   }
 
@@ -1237,6 +1237,7 @@ button:hover {
 
     width: 100%;
     display: grid;
+    /* align-items: center; */
     grid-template-columns: repeat(12, 1fr);
     gap: 0.5rem;
   }
@@ -1257,15 +1258,16 @@ button:hover {
   }
   .headshot {
     width: max(75%, 280px);
-    margin: 10vh 0 0 auto;
+    /* margin: 0vh 0 0 auto; */
   }
   .intro-text {
     grid-column: 1 / 7;
     grid-row: 3 / 6;
     justify-self: start;
+    align-self: center;
 
-    margin-right: 1rem;
-    margin-top: 4em;
+    margin-left: 4rem;
+    margin-right: 2rem;
 
     text-align: left;
     font-size: 1.35rem;
@@ -1303,7 +1305,7 @@ button:hover {
     &::after {
       content: '';
       position: absolute;
-      inset: 0;
+      inset: -4rem 0;
       max-width: 100vw;
       margin: 0 auto;
       overflow: hidden;
@@ -1336,7 +1338,7 @@ button:hover {
     width: 450px;
   }
   .project-card.three {
-    width: 400px;
+    width: 425px;
   }
   .project-card.left {
     margin-right: auto;
@@ -1458,17 +1460,7 @@ button:hover {
   .cta-wrapper {
     grid-column: 2 / 12;
   }
-  /* .cube-container { */
-    /* width: 200px; */
-    /* height: 200px; */
-    /* width: 25%;
-    height: 25%; */
-    /* top: 33%; */
-    /* left: 34%; */
-  /* } */
   .cube {
-    /* width: 80%; */
-    /* height: 80%; */
     transform-style: preserve-3d;
     transform: rotate3d(-0.5, -1, 0.19, 45deg) translateX(-2%);
   }
@@ -1493,12 +1485,6 @@ button:hover {
   .face.right {
     transform: translateX(50%) rotateY(90deg);
   }
-  /* .face.front {
-    transform: translateZ(50);
-  } */
-  /* .face.back {
-    transform: translateZ(-80px) rotateY(180deg);
-  } */
 
   /* Tablet: Portfolio */
   .project-link-item {
@@ -1699,11 +1685,15 @@ button:hover {
   }
   .about-three {
     grid-column: 3 / 10;
-    grid-row: 3 / 4;
+    grid-row: 5 / 6;
   }
   .about-four {
     grid-column: 6 / 13;
     grid-row: 4 / 5;
+  }
+  .parallax-frame {
+    grid-column: 3 / 10;
+    grid-row: 3 / 4;
   }
 
   /* Projects */
@@ -1822,8 +1812,8 @@ button:hover {
   .home {
     column-gap: 1.25rem; /* 20px gutter */
     row-gap: 8rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    /* padding-left: 4rem; */
+    /* padding-right: 4rem; */
   }
   .intro {
     padding: 0;
@@ -1832,10 +1822,13 @@ button:hover {
   }
   .intro-content-wrapper {
     margin: 0;
-    padding: 0;
+    padding: 0 4rem;
 
     width: 100%;
     gap: 1.25rem;
+
+    /* TODO: ASSESS IF NEEDED */
+    max-width: 1600px;
   }
   .intro .home-h1 {
     font-size: max(7rem, 10vw);
@@ -1849,24 +1842,26 @@ button:hover {
     grid-column: 7 / 13;
     grid-row: 2 / 3;
     align-self: center;
-    margin-top: 0;
+    margin-top: -10%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
   }
   .intro-text {
     grid-column: 1 / 7;
     grid-row: 2 / 3;
-    align-self: start;
     padding-top: 1rem;  
     font-size: 1.35rem;
     line-height: 2.25rem;
   }
   svg.squiggle {
-    top: min(120%, 260px);
+    top: min(120%, 250px);
     left: min(115%, 40vw);
     width: min(250px, 35%);
-    transform: rotate(-90deg);
+    transform: rotate(-75deg);
   }
   .headshot {
-    width: max(85%, 375px);
+    width: max(75%, 375px);
     margin-left: 2rem;
   }
 
@@ -1877,6 +1872,12 @@ button:hover {
   }
   .project-card {
     width: min(500px, 80%);
+  }
+  .project-card.left {
+    margin-left: 4rem;
+  }
+  .project-card.right {
+    margin-right: 4rem;
   }
   .project-card.one {
     width: 450px;
@@ -1924,6 +1925,7 @@ button:hover {
   }
   .cta-wrapper {
     grid-column: 1 / 8;
+    max-width: 650px;
   }
   .cube-container {
     margin-bottom: 10%;
@@ -2180,11 +2182,15 @@ button:hover {
   }
   .about-three {
     grid-column: 7 / 13;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
   }
   .about-four {
     grid-column: 1 / 7;
     grid-row: 3 / 4;
+  }
+  .parallax-frame {
+    grid-column: 7 / 13;
+    grid-row: 2 / 3;
   }
   .square,
   .square a:visited {
@@ -2227,9 +2233,18 @@ button:hover {
     padding-left: 10%;
   }
   /* LG: About */
+  .about.grid {
+    gap: 1.75rem;
+  }
+  .about-h1 {
+    font-size: 7rem;
+  }
+  .about h2 {
+    font-size: 2.75rem;
+  }
   .about p {
-    font-size: 1.15rem;
-    line-height: 1.5rem;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
   .about h1 {
     grid-column: 1 / 5;
@@ -2241,9 +2256,13 @@ button:hover {
     grid-column: 5 / 9;
   }
   .about-three {
-    grid-column: 9 / 13;
+    grid-column: 1 / 5;
+    grid-row: 2 / 3;
   }
   .about-four {
+    grid-column: 9 / 13;
+  }
+  .parallax-frame {
     grid-column: 9 / 13;
   }
 }
